release: merge dev into main (#1)
* feat : add flyway dependency

* feat : entity 구조 생성

* feat: Entity 생성

* feat : Entity Index Script 작성

* feat : 엔티티 생성 오류 수정

* 엔티티작성

* 엔티티작성

* fix: 엔티티 코드 재정렬

* fix: 엔티티 코드 재정렬

* feat : Entity Index Script 작성

* feat : notification entity 폴더 구조 추가

* fix: pr review 반영

* feat : checklistComment entity에 자식 댓글 리스트 컬럼 추가

* fix : post 엔티티 연관 관계 수정

* feat : Auditing 기능 활성화 Entity 수정

* fix : checklistTemplate 내 컬럼 오류로 인한 수정 (#41) (#47)

* fix : checklistTemplate 내 컬럼 오류로 인한 수정

* fix : enum 값 post hashtag와 동일하여 변경

* feat: CI 파이프라인 구축

* fix:  spring.profiles.default 오타 수정

* feat : Flyway 스크립트 실행 검증(#48) (#49)

* feat: cd 파이프라인 구축

* feat : ec2 배포용 docker script작성 및, README 수정

* fix : docker compose에 .env 연결

* fix : aws rds 주소 변경으로 인한 수정

* fix : 실행 프로필 dev로 변경

* feat: open api 버전 변경

* feat: 공통 에러코드 추가

* feat: 게시물 생성 기능 구현

* feat : AWS S3 연결

* fix: 중복 테스트 코드 삭제 및 위치변경

* feat : CS POST 게시글 작성 (#10) (#61)

* feat : cs 게시글 작성 테스트 코드 작성

* feat : cs post 저장시 테스트 코드 수정

* feat : file test code 추가

* feat : csrf 개발 환경에서 임시 비활성화

* feat : CS POST 게시글 작성 api 구현

* refactor : 코드 리뷰 피드백 수정

* refactor : file 변환 로직 정리

* refactor: 리뷰 반영

* fix: 중복 세미콜론 제거

* feat: 게시물 목록 조히, 상세조회, api 명세 작성 (#65)

* feat : 파일 업로드 구현 및 테스트코드 작성 (#58) (#64)

* feat : file controller에 swagger 명세 작성

* feat : swagger 명세 인터페이스로 분리 및, S3 service 작성.

* fix : S3에 파일 업로드 시 이름이 없는 파일을 업로드 하면 예외처리

* fix : 여러 파일 업로드 및 다운로드 url 구현 (#67)

* fix : CI branches 이름 수정.

* feat : test.yml 추가

* feat: 게시물 수정 (#57) (#66)

* feat: 게시물 수정

* feat: 테스트 코드 작성

* fix: Flyway Bean 등록

* Update ci.yml

* fix: ci 오류 수정

* fix: ci 오류 수정

* fix: ci 오류 수정

* fix: ci 오류 수정

* fix: ci 오류 수정

* fix: ci 오류 수정

* fix: ci 오류 수정

* fix: ci 오류 수정

---------

Co-authored-by: CHO GUNHEE <106148197+dkqpeo@users.noreply.github.com>

* refactor : 엔티티 스키마 정비 및 히스토리 공통화 리팩터링 (#71) (#72)

* refactor : entity 구조 변경

* refactor: 컬럼이름변경

* refactor : entity 구조 최종 수정 및 history base entity 작성

*